--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.11",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.3.4",
+    "js-cookie": "^3.0.1",
     "mobx": "^6.8.0",
     "mobx-react": "^7.6.0",
     "mobx-react-lite": "^3.4.2",
@@ -45,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^3.0.3"
   }
 }
